--- a/Toodoo/Base.lproj/Main.storyboard
+++ b/Toodoo/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="LwT-W1-G8P" id="6pX-1b-MaL"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="TooDoo" id="BT7-7N-k44"/>
+                    <navigationItem key="navigationItem" title="TooDoo" id="BT7-7N-k44">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="vZ4-c9-Diz">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addToList:" destination="LwT-W1-G8P" id="Dba-IK-Q7N"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qWd-15-seY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -46,9 +53,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7yY-cy-tOf">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.69854872359999998" green="0.80502909180000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.25969001019999999" green="0.65059203769999996" blue="0.97488064240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                            <color key="textColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
